--- a/exo1/index.html
+++ b/exo1/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Exercice 1</title>
   </head>
   <body ng-app>
     <div class="sum">
-      220 + 304 = {{220+304}}
+      220 + 304 = {{220+304}} <!-- double {{ pour interpréter et modifier en angularjs}} -->
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.7/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.7/angular.min.js"></script> <!-- on peut le mettre en haut ou en bas -->
   </body>
   </html>
