--- a/exo6/index.html
+++ b/exo6/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>Exercice 6</title>
 </head>
 <body>
@@ -14,13 +14,13 @@
       220 - 304 = {{220-304}}
     </div>
     <div ng-app class="sum2">
-    <div>
-      220 * 304 = {{220 * 304}}
+      <div>
+        220 * 304 = {{220 * 304}}
+      </div>
+      <div>
+        220/304 = {{220 / 304}}
+      </div>
     </div>
-    <div>
-      220/304 = {{220 / 304}}
-    </div>
-  </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.7/angular.min.js"></script>
 </body>
